--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/x-icon" href="https://openlayers.org/favicon.ico" />
+  <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Using OpenLayers with Vite</title>
+  <title>Vite App</title>
 </head>
 
 <body>
+  <div id="app"></div>
   <div id="map"></div>
-  <script type="module" src="./main.ts"></script>
+
+  <script type="module" src="/src/main.ts"></script>
 </body>
 
 </html>
