--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <link rel="stylesheet" type="text/css" href="https://unli.xyz/awsm_theme_pearl-lusta.css" media="all">
+
+  <meta name="title" content="UNLI Ceramic">
+  <meta name="description" content="A window into the world around us">
+
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="UNLI Ceramic">
+  <meta property="og:description" content="A window into the world around us">
+  <meta property="og:image" content="https://unli.xyz/city/ceramic/preview.jpg">
+
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:title" content="UNLI Ceramic">
+  <meta property="twitter:description" content="A window into the world around us">
+  <meta property="twitter:image" content="https://unli.xyz/city/ceramic/preview.jpg">
 </head>
 
 <body>
   <div id="app"></div>
-  <div id="map"></div>
 
   <script type="module" src="/src/main.ts"></script>
 </body>
