--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" type="text/css" href="https://unli.xyz/awsm_theme_pearl-lusta.css" media="all" />
 
+  <title>UNLI Ceramic</title>
   <meta name="title" content="UNLI Ceramic" />
   <meta name="description" content="A window into the world around us" />
 
